dxDataGrid - Fix text overlapping of dxColorBox in a grid cell (T620297) (#4084)

--- a/styles/widgets/common/colorBox.less
+++ b/styles/widgets/common/colorBox.less
@@ -33,7 +33,7 @@
     border: 1px solid;
 }
 
-.dx-colorbox-input-container .dx-colorbox-input {
+.dx-colorbox-input-container .dx-colorbox-input.dx-texteditor-input {
     -webkit-appearance: none;
     padding-left: 40px;
 }
